--- a/index.html
+++ b/index.html
@@ -53,13 +53,6 @@ div.WordSection1
 <p class=MsoNormal align=center style='text-align:center'><span
 style='font-size:20.0pt;line-height:107%'>Title</span></p>
 
-<p class=MsoNormal align=center style='text-align:center'><span
-style='font-size:20.0pt;line-height:107%'>&nbsp;</span></p>
-
-<p class=MsoNormal align=center style='text-align:center'><span
-style='font-size:12.0pt;line-height:107%'>Student ID: ___________ Name (English):
-________________Name (Chinese): ________</span></p>
-
 <p class=MsoNormal><span style='font-size:12.0pt;line-height:107%'>&nbsp;</span></p>
 
 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'><span
@@ -99,7 +92,7 @@ incoming traffic to Tunghai University.</span></p>
 style='font-size:12.0pt;line-height:107%'>&nbsp;</span></p>
 
 <p class=MsoCaption style='page-break-after:avoid'><a name="_Ref161731955">Table
-1</a> Traffic statistics in Tunghai University</p>
+</a>1 Traffic statistics in Tunghai University</p>
 
 <table class=MsoTableGrid border=1 cellspacing=0 cellpadding=0
  style='border-collapse:collapse;border:none'>
@@ -348,9 +341,9 @@ style='font-size:12.0pt;line-height:107%'>&nbsp;</span></p>
 
 <p class=MsoNormal align=center style='text-align:center;page-break-after:avoid'><span
 style='font-size:12.0pt;line-height:107%'><img width=397 height=371
-id="Picture 1" src="Assignment_Template(4)_files/image001.png"></span></p>
+id="Picture 1" src="index_files/image001.png"></span></p>
 
-<p class=MsoCaption><a name="_Ref161731672">Figure 1</a> The most popular terms
+<p class=MsoCaption><a name="_Ref161731672">Figure </a>1 The most popular terms
 in the research</p>
 
 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'><span
