--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ style='font-size:20.0pt;line-height:107%'>Title</span></p>
 style='font-size:12.0pt;line-height:107%'>1. Introduction</span></p>
 
 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'><span
-style='font-size:12.0pt;line-height:107%'>Â Â Â Â Â Â Â Â Â Â Â  The 2030 Agenda for
+style='font-size:12.0pt;line-height:107%'>            The 2030 Agenda for
 Sustainable Development, adopted by all United Nations Member States in 2015,
 provides a shared blueprint for peace and prosperity for people and the planet,
 now and into the future. At its heart are the 17 Sustainable Development Goals
@@ -67,7 +67,7 @@ now and into the future. At its heart are the 17 Sustainable Development Goals
 countries in a global partnership. </span></p>
 
 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'><span
-style='font-size:12.0pt;line-height:107%'>Â Â Â Â Â Â Â Â Â Â Â  The 2030 Agenda for
+style='font-size:12.0pt;line-height:107%'>            The 2030 Agenda for
 Sustainable Development, adopted by all United Nations Member States in 2015,
 provides a shared blueprint for peace and prosperity for people and the planet,
 now and into the future. At its heart are the 17 Sustainable Development Goals
@@ -81,9 +81,9 @@ style='font-size:12.0pt;line-height:107%'>&nbsp;</span></p>
 style='font-size:12.0pt;line-height:107%'>2. Data and Methods</span></p>
 
 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'><span
-style='font-size:12.0pt;line-height:107%'>Â Â Â Â Â Â Â Â Â Â Â  They recognize that
+style='font-size:12.0pt;line-height:107%'>            They recognize that
 ending poverty and other deprivations must go hand-in-hand with strategies that
-improve health and education, reduce inequality, and spur economic growth â€“ all
+improve health and education, reduce inequality, and spur economic growth – all
 while tackling climate change and working to preserve our oceans and forests. </span>Table
 1<span style='font-size:12.0pt;line-height:107%'> presents the raw data of
 incoming traffic to Tunghai University.</span></p>
@@ -318,8 +318,8 @@ style='font-size:12.0pt;line-height:107%'>&nbsp;</span></p>
 style='font-size:12.0pt;line-height:107%'>3. Results</span></p>
 
 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'><span
-style='font-size:12.0pt;line-height:107%'>Â Â Â Â Â Â Â Â Â Â Â  As </span>Figure 1<span style='font-size:12.0pt;line-height:107%'> shows, the most popular term
-in 2021 is â€˜app.â€™ The 2030 Agenda for Sustainable Development, adopted by all
+style='font-size:12.0pt;line-height:107%'>            As </span>Figure 1<span style='font-size:12.0pt;line-height:107%'> shows, the most popular term
+in 2021 is ‘app.’ The 2030 Agenda for Sustainable Development, adopted by all
 United Nations Member States in 2015, provides a shared blueprint for peace and
 prosperity for people and the planet, now and into the future. At its heart are
 the 17 Sustainable Development Goals (SDGs), which are an urgent call for
@@ -353,7 +353,7 @@ style='font-size:12.0pt;line-height:107%'>&nbsp;</span></p>
 style='font-size:12.0pt;line-height:107%'>4. Conclusion</span></p>
 
 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'><span
-style='font-size:12.0pt;line-height:107%'>Â Â Â Â Â Â Â Â Â Â Â  The 2030 Agenda for
+style='font-size:12.0pt;line-height:107%'>            The 2030 Agenda for
 Sustainable Development, adopted by all United Nations Member States in 2015,
 provides a shared blueprint for peace and prosperity for people and the planet,
 now and into the future. At its heart are the 17 Sustainable Development Goals
@@ -361,7 +361,7 @@ now and into the future. At its heart are the 17 Sustainable Development Goals
 countries in a global partnership. </span></p>
 
 <p class=MsoNormal style='text-align:justify;text-justify:inter-ideograph'><span
-style='font-size:12.0pt;line-height:107%'>Â Â Â Â Â Â Â Â Â Â Â  The 2030 Agenda for
+style='font-size:12.0pt;line-height:107%'>            The 2030 Agenda for
 Sustainable Development, adopted by all United Nations Member States in 2015,
 provides a shared blueprint for peace and prosperity for people and the planet,
 now and into the future. At its heart are the 17 Sustainable Development Goals
