--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>R Notebook</title>
+<title>Exploring Trends in Global Temperature</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -1619,17 +1619,14 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">R Notebook</h1>
+<h1 class="title toc-ignore">Exploring Trends in Global Temperature</h1>
 
 </div>
 
 
-<p>This is an <a href="http://rmarkdown.rstudio.com">R Markdown</a>
-Notebook. When you execute code within the notebook, the results appear
-beneath the code.</p>
-<p>Try executing this chunk by clicking the <em>Run</em> button within
-the chunk or by placing your cursor inside it and pressing
-<em>Ctrl+Shift+Enter</em>.</p>
+<p>The aim of this page to analyze and visualize world temperature using
+exploratory data analysis (EDA ) in R. In this report, we use
+<code>weather</code> data from <code>ncyflights13</code> package.</p>
 <pre class="r"><code>library(nycflights13)
 # Get data
 df &lt;- weather</code></pre>
